--- a/package.json
+++ b/package.json
@@ -4,5 +4,11 @@
   "description": "ReactButton",
   "author": {
     "name": ""
+  },
+  "dependencies": {
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   }
 }
