--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
-    "python.pythonPath": "backend/bin/python3",
-    "git.ignoreLimitWarning": true
+    "python.pythonPath": "/usr/bin/python3.6",
+    "git.ignoreLimitWarning": true,
+    "python.linting.pylintEnabled": true,
+    "python.linting.enabled": true
 }
